--- a/webpages/brainstorm/package.json
+++ b/webpages/brainstorm/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
+    "react-redux": "7.2.6",
     "react-scripts": "4.0.3"
   },
   "scripts": {
