--- a/webpages/brainstorm/package.json
+++ b/webpages/brainstorm/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "bootstrap": "^4.6.0",
+    "dayjs": "1.10.7",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.4",
     "react-redux": "7.2.6",
